--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - ./.envs/.local/.django
       - ./.envs/.local/.postgres
     ports:
-      - '8000:8000'
+      - "8000:8000"
     command: /start
 
   postgres:
@@ -31,16 +31,21 @@ services:
     volumes:
       - django_template_project_local_postgres_data:/var/lib/postgresql/data
       - django_template_project_local_postgres_data_backups:/backups
-    env_file:
-      - ./.envs/.local/.postgres
+    # env_file:
+    #   - ./.envs/.local/.postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-secret}
+    ports:
+      - 127.0.0.1:${DB_PORT:-5432}:5432
 
   redis:
     image: docker.io/redis:6
     container_name: django_template_project_local_redis
-    
+
     volumes:
       - django_template_project_local_redis_data:/data
-    
 
   celeryworker:
     <<: *django
@@ -67,7 +72,7 @@ services:
     image: django_template_project_local_flower
     container_name: django_template_project_local_flower
     ports:
-      - '5555:5555'
+      - "5555:5555"
     command: /start-flower
 
   node:
@@ -84,4 +89,4 @@ services:
       - /app/node_modules
     command: npm run dev
     ports:
-      - '3000:3000'
+      - "3000:3000"
