--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Build the Stack
         run: docker compose -f docker-compose.yml build django
 
-      - name: Build the docs
-        run: docker compose -f docker-compose.docs.yml build docs
+      # - name: Build the docs
+      #   run: docker compose -f docker-compose.docs.yml build docs
 
       - name: Run DB Migrations
         run: docker compose -f docker-compose.yml run --rm django python manage.py migrate
