--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
       - redis
     volumes:
       - .:/app:z
-    env_file:
-      - ./.envs/.local/.django
-      - ./.envs/.local/.postgres
+    # env_file:
+    #   - ./.envs/.local/.django
+    #   - ./.envs/.local/.postgres
     ports:
       - "8000:8000"
     command: /start
